// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions: string 1`] = `
Object {
  "catch": [Function],
  "error": null,
  "then": [Function],
  "value": Object {
    "query": Object {
      "actions": "123",
      "cache": false,
      "selector": "selector",
      "url": "http://url.com",
    },
  },
}
`;

exports[`actions: string[1] 1`] = `
Object {
  "catch": [Function],
  "error": null,
  "then": [Function],
  "value": Object {
    "query": Object {
      "actions": Array [
        "123",
      ],
      "cache": false,
      "selector": "selector",
      "url": "http://url.com",
    },
  },
}
`;

exports[`actions: string[2] 1`] = `
Object {
  "catch": [Function],
  "error": null,
  "then": [Function],
  "value": Object {
    "query": Object {
      "actions": Array [
        "123",
        "456",
      ],
      "cache": false,
      "selector": "selector",
      "url": "http://url.com",
    },
  },
}
`;

exports[`cache: false 1`] = `
Object {
  "catch": [Function],
  "error": null,
  "then": [Function],
  "value": Object {
    "query": Object {
      "cache": false,
      "selector": "selector",
      "url": "http://url.com",
    },
  },
}
`;

exports[`cache: true 1`] = `
Object {
  "catch": [Function],
  "error": null,
  "then": [Function],
  "value": Object {
    "query": Object {
      "cache": true,
      "selector": "selector",
      "url": "http://url.com",
    },
  },
}
`;

exports[`invalid uri format 1`] = `
Object {
  "catch": [Function],
  "error": [ValidationError: child "query" fails because [child "url" fails because ["url" must be a valid uri]]],
  "then": [Function],
  "value": Object {
    "query": Object {
      "selector": "selector",
      "url": "123",
    },
  },
}
`;

exports[`json 1`] = `
Object {
  "catch": [Function],
  "error": null,
  "then": [Function],
  "value": Object {
    "query": Object {
      "actions": Array [
        "123",
        "456",
      ],
      "cache": false,
      "format": "json",
      "selector": "selector",
      "url": "http://url.com",
    },
  },
}
`;

exports[`not support 1`] = `
Object {
  "catch": [Function],
  "error": [ValidationError: child "query" fails because [child "format" fails because ["format" must be one of [raw, json]]]],
  "then": [Function],
  "value": Object {
    "query": Object {
      "actions": Array [
        "123",
        "456",
      ],
      "cache": false,
      "format": "not support",
      "selector": "selector",
      "url": "http://url.com",
    },
  },
}
`;

exports[`raw 1`] = `
Object {
  "catch": [Function],
  "error": null,
  "then": [Function],
  "value": Object {
    "query": Object {
      "actions": Array [
        "123",
        "456",
      ],
      "cache": false,
      "format": "raw",
      "selector": "selector",
      "url": "http://url.com",
    },
  },
}
`;

exports[`required 1`] = `
Object {
  "catch": [Function],
  "error": [ValidationError: child "query" fails because [child "url" fails because ["url" is required]]],
  "then": [Function],
  "value": Object {
    "query": Object {},
  },
}
`;

exports[`should return result 1`] = `
Object {
  "catch": [Function],
  "error": null,
  "then": [Function],
  "value": Object {
    "query": Object {
      "selector": "selector",
      "url": "http://url.com",
    },
  },
}
`;
